--- a/src/app/landing-footer/landing-footer.component.scss
+++ b/src/app/landing-footer/landing-footer.component.scss
@@ -126,6 +126,9 @@ $break-sm: 576px;
 }
 
 footer {
+    &.padding-top-and-bottom {
+        padding:30px 0 25px 0 !important;
+    }
     .footer-logo {
         width: 300px;
         margin: auto;
@@ -181,7 +184,6 @@ footer {
     }
     .footer-copyright {
         position: relative;
-        bottom: -70px;
         p {
             text-align: center;
         }
@@ -228,12 +230,8 @@ footer {
             width: 100% !important;
             padding-bottom: 5px;
         }
-    }
-    footer.padding-top-and-bottom {
-        padding: 10px 0 !important;
         .footer-copyright {
-            bottom: 0;
-            padding: 25px 0;
+            padding-top: 15px;
         }
     }
     .footer-social-networks {
