--- a/src/app/form-host/form-host.component.html
+++ b/src/app/form-host/form-host.component.html
@@ -1,120 +1,278 @@
 <div>
-  <form *ngIf='!loading' [formGroup]='signUp' (keydown.enter)='submit()'>
+  <form *ngIf='!loading' [formGroup]='signUp' (keydown.enter)='submit()' class='forms'>
     <div class='row' id='signUp'>
-      <h1>
-        Inscreva-se:
-      </h1>
-      <div class="alert alert-warning alert-dismissible fade show animated fadeIn" role="alert" *ngIf="invalidEmail">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <i class="far fa-times-circle fa-lg"></i>
-        </button>
-        <p>Já existe um usuário com esse endereço de email!
-          <strong>Gostaria de acessar a plataforma?</strong>
-        </p>
-      </div>
-      <div class='col-12'>
-        <label for='fullname' [ngClass]='{"has-content": user.fullname }'>Nome</label>
-        <input type='text' name='fullname' [(ngModel)]='user.fullname' formControlName='fullname' name='fullname' required>
-        <div *ngIf="isValid('fullname')" class='error-message'>
-          Preencha com o seu nome.
+      <div class="col-sm">
+        <h1>
+          Inscreva-se:
+        </h1>
+        <div class="alert alert-warning alert-dismissible fade show animated fadeIn" role="alert" *ngIf="invalidEmail">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <i class="far fa-times-circle fa-lg"></i>
+          </button>
+          <p>Já existe um usuário com esse endereço de email!
+            <strong>Gostaria de acessar a plataforma?</strong>
+          </p>
         </div>
-      </div>
-      <div class='col-12'>
-        <label for='fullname' [ngClass]='{"has-content": user.email }'>E-mail</label>
-        <input type="email" [(ngModel)]="user.email" (blur)="checkEmail()" formControlName="email" name="email" email required>
-        <div *ngIf="isValid('email')" class='error-message'>
-          Preencha com o seu email.
-        </div>
-      </div>
-      <div class='col-12'>
-        <label for='fullname' [ngClass]='{"has-content": user.cellphone }'>Celular</label>
-        <input type="tel" [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" mask="(00) 0000-00009" (blur)="checkPhone()"
-          required>
-        <div *ngIf="invalidPhone || isValid('cellphone')" class='error-message'>
-          Por favor, digite um número de celular válido.
-        </div>
-      </div>
-      <div class='col-12'>
-        <div class='row without-border'>
-          <div class='col-11 without-border'>
-            <label for='cep' [ngClass]='{"has-content": user.cep }'>CEP</label>
-            <input type="tel" mask="00000-000" [(ngModel)]="user.cep" formControlName="cep" name="cep" required (blur)='getZipcode(user.cep)'>
-          </div>
-          <div class='col-1'>
-            <button class='button with-background default' (click)='getZipcode(user.cep)'>
-              <i class="fas fa-search"></i>
-            </button>
-          </div>
-          <div *ngIf="isValid('cep') || invalidZipcode" class='error-message'>
-            Por favor, preencha um CEP válido.
-          </div>
-        </div>
+        <div class='col-12'>
 
-      </div>
-      <div *ngIf='hasZipCode' class='col-12 address without-border'>
-        <div class='col-12'>
-          <label for='neighborhood' [ngClass]='{"has-content": user.neighborhood }'>Bairro</label>
-          <input type='text' disabled='true' name='neighborhood' [(ngModel)]='user.neighborhood' formControlName='neighborhood' name='neighborhood'
-            required>
-          <div *ngIf="isValid('neighborhood')" class='error-message'>
-            Preencha com o seu bairro.
-          </div>
-        </div>
-        <div class='col-12'>
-          <label for='city' [ngClass]='{"has-content": user.city }'>Cidade</label>
-          <input type='text' disabled='true' name='city' [(ngModel)]='user.city' formControlName='city' name='city' required>
-          <div *ngIf="isValid('city')" class='error-message'>
-            Preencha com a sua cidade
-          </div>
-        </div>
-        <div class='col-12'>
-          <label for='state' [ngClass]='{"has-content": user.state }'>Estado</label>
-          <input type='text' disabled='true' name='state' [(ngModel)]='user.state' formControlName='state' name='state' required>
-          <div *ngIf="isValid('state')" class='error-message'>
-            Preencha com o seu estado
-          </div>
-        </div>
-      </div>
-      <div class='col-12 select-autocomplete'>
-        <div class="dropdown">
-          <div class="styled-select">
-            <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
-              #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();" dropdownMode="current"
-              field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="AIESEC mais próxima"></p-autoComplete>
-            <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')" *ngIf="user.local_committee"></i>
-          </div>
-        </div>
-      </div>
-      <div class='col-12'>
-        <div *ngIf="isValid('local_committee_id')" class='error-message'>
-          Selecione uma das opções
-        </div>
-      </div>
-      <!-- Terms -->
-      <div id="content-terms" style='width: 100%;'>
-        <div class="row forms-term">
-          <div class="col-sm-12">
-            <div>
-              <div class='forms-terms-area' (click)='openModal()'>
-                <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
-                <label class='forms-tem-accepted info-mobile-content'>
-                  Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
-                  <br>
-                  <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
-                </label>
+          <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-prepend desktop">
+                <div class="input-group-text">
+                  <i class="fas fa-user"></i>Nome Completo
+                </div>
+              </div>
+              <!-- desktop -->
+              <input type="text" class="form-control desktop" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname" formControlName="fullname" name="fullname" required>
+
+              <!-- mobile -->
+              <i class="fas fa-user mobile mobile-icon"></i>
+              <input type="text" class="form-control mobile" placeholder="Nome completo" [(ngModel)]="user.fullname" formControlName="fullname"
+                name="fullname" required>
+              <div class="valid-feedback">
+                <i class="fas fa-check"></i>
+              </div>
+              <div *ngIf="isValid('fullname')" class='error-message'>
+                Preencha com o seu nome.
               </div>
             </div>
           </div>
+
         </div>
-        <div class='col-sm-12'>
-          <div class="form-group form-check text-center checkbox">
-            <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable" id="aceitoTermos" [(ngModel)]="user.cellphone_contactable"
-              formControlName="cellphone_contactable" name="cellphone_contactable">
-            <label class="form-check-label" for="aceitoTermos"> Gostaria de ser contatado por ligação ou mensagens no meu número de celular.</label>
+        <div class='col-12'>
+
+          <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-prepend desktop">
+                <div class="input-group-text">
+                  <i class="fas fa-envelope"></i>E-mail
+                </div>
+              </div>
+              <!-- desktop -->
+              <input type="text" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" (blur)="checkEmail()" [(ngModel)]="user.email" formControlName="email" name="email" required>
+
+              <!-- mobile -->
+              <i class="fas fa-envelope mobile mobile-icon"></i>
+              <input type="text" class="form-control mobile" placeholder="E-mail" (blur)="checkEmail()" [(ngModel)]="user.email" formControlName="email"
+                name="email" required>
+              <div class="valid-feedback">
+                <i class="fas fa-check"></i>
+              </div>
+              <div *ngIf="isValid('email')" class='error-message'>
+                Preencha com o seu email.
+              </div>
+            </div>
           </div>
-          <button (click)='submit()' [ngClass]='{"not-allowed": unableToSubmit()}' [disabled]='unableToSubmit()'>
-            Enviar
-          </button>
+
+        </div>
+        <div class='col-12'>
+
+          <div class="form-group">
+            <div class="input-group">
+              <div class="input-group-prepend desktop">
+                <div class="input-group-text">
+                  <i class="fas fa-mobile-alt"></i>Celular
+                </div>
+              </div>
+              <!-- desktop -->
+              <input type="tel" class="form-control desktop" placeholder="Vamos falar com você por aqui!" mask="(00) 0000-00009" (blur)="checkPhone()" [(ngModel)]="user.cellphone" formControlName="fullname" name="cellphone" required>
+
+              <!-- mobile -->
+              <i class="fas fa-mobile-alt mobile mobile-icon"></i>
+              <input type="tel" class="form-control mobile" placeholder="Celular" mask="(00) 0000-00009" (blur)="checkPhone()" [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" required>
+              <div class="valid-feedback">
+                <i class="fas fa-check"></i>
+              </div>
+              <div *ngIf="invalidPhone || isValid('cellphone')" class='error-message'>
+                Por favor, digite um número de celular válido.
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        <div class='col-12'>
+
+          <div class='row without-border'>
+            <div class='col-11 without-border'>
+              <div class="form-group">
+                <div class="input-group">
+                  <div class="input-group-prepend desktop">
+                    <div class="input-group-text">
+                      <i class="fas fa-location-arrow"></i>CEP
+                    </div>
+                  </div>
+                  <!-- desktop -->
+                  <input type="tel" class="form-control desktop" placeholder="Informe seu CEP" mask="00000-000" [(ngModel)]="user.cep" formControlName="fullname" name="cep" (blur)='getZipcode(user.cep)' required>
+
+                  <!-- mobile -->
+                  <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                  <input type="tel" class="form-control mobile" placeholder="Celular" mask="00000-000" (blur)="checkPhone()" [(ngModel)]="user.cep" formControlName="cep"
+                    name="email" required>
+                  <div class="valid-feedback">
+                    <i class="fas fa-check"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class='col-1'>
+              <button class='button with-background default' (click)='getZipcode(user.cep)'>
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
+          </div>
+
+          <div *ngIf="isValid('cep') || invalidZipcode" class='error-message'>
+            Por favor, preencha um CEP válido.
+          </div>
+
+          <!-- <div class='row without-border'>
+            <div class='col-11 without-border'>
+              <label for='cep' [ngClass]='{"has-content": user.cep }'>CEP</label>
+              <input type="tel" mask="00000-000" [(ngModel)]="user.cep" formControlName="cep" name="cep" required (blur)='getZipcode(user.cep)'>
+            </div>
+            <div class='col-1'>
+              <button class='button with-background default' (click)='getZipcode(user.cep)'>
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
+            <div *ngIf="isValid('cep') || invalidZipcode" class='error-message'>
+              Por favor, preencha um CEP válido.
+            </div>
+          </div> -->
+
+        </div>
+        <div *ngIf='hasZipCode' class='col-12 address without-border'>
+          <div class='col-12'>
+
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend desktop">
+                  <div class="input-group-text">
+                    <i class="fas fa-location-arrow"></i>Bairro
+                  </div>
+                </div>
+                <!-- desktop -->
+                <input type="text" class="form-control desktop" disabled='true' placeholder="Bairro" name='neighborhood' [(ngModel)]='user.neighborhood' formControlName='neighborhood' required>
+
+                <!-- mobile -->
+                <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                <input type="tel" class="form-control mobile" disabled='true' placeholder="Bairro" name='neighborhood' [(ngModel)]='user.neighborhood' formControlName='neighborhood' required>
+                <div class="valid-feedback">
+                  <i class="fas fa-check"></i>
+                </div>
+
+                <div *ngIf="isValid('neighborhood')" class='error-message'>
+                  Preencha com o seu bairro.
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class='col-12'>
+
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend desktop">
+                  <div class="input-group-text">
+                    <i class="fas fa-location-arrow"></i>Cidade
+                  </div>
+                </div>
+                <!-- desktop -->
+                <input type="text" class="form-control desktop" disabled='true' placeholder="Cidade" name='city' [(ngModel)]='user.city' formControlName='city' required>
+
+                <!-- mobile -->
+                <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                <input type="tel" class="form-control mobile" disabled='true' placeholder="Cidade" name='city' [(ngModel)]='user.city' formControlName='city' required>
+                <div class="valid-feedback">
+                  <i class="fas fa-check"></i>
+                </div>
+
+                <div *ngIf="isValid('city')" class='error-message'>
+                  Preencha com a sua cidade.
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class='col-12'>
+
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend desktop">
+                  <div class="input-group-text">
+                    <i class="fas fa-location-arrow"></i>Estado
+                  </div>
+                </div>
+                <!-- desktop -->
+                <input type="text" class="form-control desktop" disabled='true' placeholder="Estado" name='state' [(ngModel)]='user.state' formControlName='state' required>
+
+                <!-- mobile -->
+                <i class="fas fa-location-arrow mobile mobile-icon"></i>
+                <input type="tel" class="form-control mobile" disabled='true' placeholder="Estado" [(ngModel)]='user.state' formControlName='state' name='state' required>
+                <div class="valid-feedback">
+                  <i class="fas fa-check"></i>
+                </div>
+
+                <div *ngIf="isValid('state')" class='error-message'>
+                  Preencha com o seu estado.
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class='col-12'>
+
+          <div class="form-group">
+            <div class="input-group select-dropdown">
+              <div class="input-group-prepend">
+                <div class="input-group-text">
+                  <i class="fas fa-map-marker-alt"></i>AIESEC mais próxima</div>
+              </div>
+              <div class="dropdown">
+                <div class="styled-select">
+                  <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
+                    #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();"
+                    dropdownMode="current" field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado"
+                    placeholder="Esse é o escritório que vai cuidar de você!"></p-autoComplete>
+                  <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')" *ngIf="user.local_committee"></i>
+                </div>
+              </div>
+            </div>
+            <div *ngIf="isValid('local_committee_id')" class='error-message'>
+              Selecione uma das opções
+            </div>
+          </div>
+
+        </div>
+        <!-- Terms -->
+        <div id="content-terms" style='width: 100%;'>
+          <div class="row forms-term">
+            <div class="col-sm-12">
+              <div>
+                <div class='forms-terms-area' (click)='openModal()'>
+                  <label for="inputTermos" class='input-terms-label'>Termos e Condições</label>
+                  <label class='forms-tem-accepted info-mobile-content'>
+                    Ao se cadastrar, você está concordando com os termos e condições da AIESEC Brasil.
+                    <br>
+                    <span style='text-decoration: underline'> Para ler os termos, basta clicar aqui. </span>
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class='col-sm-12'>
+            <div class="form-group form-check text-center checkbox">
+              <input type="checkbox" class="form-check-input" [checked]="user.cellphone_contactable" id="aceitoTermos" [(ngModel)]="user.cellphone_contactable"
+                formControlName="cellphone_contactable" name="cellphone_contactable">
+              <label class="form-check-label" for="aceitoTermos"> Gostaria de ser contatado por ligação ou mensagens no meu número de celular.</label>
+            </div>
+            <button type="button" (click)="submit()" [ngClass]='{"not-allowed": unableToSubmit(), "submit-form": true, "btn-primary": true}' [disabled]='unableToSubmit()'>
+              Enviar
+              <i class="fab fa-telegram-plane"></i>
+            </button>
+          </div>
         </div>
       </div>
     </div>
